<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_user_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/item_user_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/sample_photos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="30dip"
        app:riv_mutate_background="true"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/item_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/fauzan_gracia_ramadhani"
        app:layout_constraintStart_toEndOf="@id/item_user_image"
        app:layout_constraintTop_toTopOf="@+id/item_user_image" />

    <TextView
        android:id="@+id/item_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/github_id"
        app:layout_constraintStart_toEndOf="@id/item_user_image"
        app:layout_constraintTop_toBottomOf="@+id/item_user_name" />

    <TextView
        android:id="@+id/item_user_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/_192761"
        app:layout_constraintStart_toEndOf="@id/item_user_id"
        app:layout_constraintTop_toBottomOf="@+id/item_user_name" />

</androidx.constraintlayout.widget.ConstraintLayout>